Fixed the banner images on 4 pages
fixed the banner images on four pages to be in same container as text
so that they scale properly and dont break on different sized screens

also removed code that would make the banner break when the screen is
too small.

--- a/delivery.css
+++ b/delivery.css
@@ -198,17 +198,24 @@ img {
 	padding: 10px 10px 0px 0px;
 }
 
+#headerimage{
+width:1000px;
+height:300px;
+margin 0px auto;
+
+position:relative;
+}
 #nickheader{
 width:1000px;
 height:300px;
 margin 0px auto;
-padding-left:210px;
+
 padding-top:20px;
 position:relative;
 }
 
 #aboutarea {
-	width: 950px;
+	width: 1000px;
 	height: 350px;
 
 	margin: 0px auto;
@@ -259,7 +266,7 @@ position:relative;
 #footer {/*needs to scale with page still and needs to be able to adjust according to how many boxes added in portfolio*/
 	width:1000px;
 	height: 70px;
-	margin: 700px 0px 0px 200px;/*NOTE:allows the footer to be positioned properly on home page, but wont move when window scaled*/
+	margin: 1000px 0px 0px 200px;/*NOTE:allows the footer to be positioned properly on home page, but wont move when window scaled*/
 	background-color:#6E6A6B;	
 	position: relative;
 	vertical-align: middle;
