--- a/theraven.css
+++ b/theraven.css
@@ -202,13 +202,12 @@ img {
 width:1000px;
 height:300px;
 margin 0px auto;
-padding-left:210px;
 padding-top:20px;
 position:relative;
 }
 
 #aboutarea {
-	width: 950px;
+	width: 1000px;
 	height: 350px;
 
 	margin: 0px auto;
@@ -259,7 +258,7 @@ position:relative;
 #footer {/*needs to scale with page still and needs to be able to adjust according to how many boxes added in portfolio*/
 	width:1000px;
 	height: 70px;
-	margin: 350px 0px 0px 200px;/*NOTE:allows the footer to be positioned properly on home page, but wont move when window scaled*/
+	margin: 600px 0px 0px 200px;/*NOTE:allows the footer to be positioned properly on home page, but wont move when window scaled*/
 	background-color:#6E6A6B;	
 	position: relative;
 	vertical-align: middle;
